# sgx-lib-demo

./: README.md  openssl-curves.numbers
example/: CMakeLists.txt
example/App/: CMakeLists.txt  main.cpp
example/Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.edl
lib-a/: CMakeLists.txt
lib-a/trusted/: CMakeLists.txt  a.cpp
lib-a/trusted/include/: a.h
lib-b/: CMakeLists.txt
lib-b/trusted/: CMakeLists.txt  b.cpp  b.edl
lib-b/trusted/include/: b.h
lib-b/untrusted/: CMakeLists.txt  ocall.cpp
